--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+flask==3.0.3
+flask-cors==4.0.0
 GitPython==3.1.40
-ipykernel
-matplotlib==3.8.2
 mypy==1.7.0
 mypy-extensions==1.0.0
 numpy==1.26.2
